crates/gelx/tests/snapshots/codegen__codegen_literals@case_28_datetime_arg__bigdecimal_chrono_bigint.snap
---
source: crates/gelx/tests/codegen.rs
expression: "&content"
---
pub mod example {
    use ::gelx::exports as __g;
    /// Execute the desired query.
    pub async fn query(
        client: impl __g::gel_tokio::QueryExecutor,
        props: &Input,
    ) -> ::core::result::Result<Vec<Output>, __g::gel_errors::Error> {
        client.query(QUERY, props).await
    }
    #[derive(::std::fmt::Debug, ::core::clone::Clone)]
    pub struct Input {
        pub timestamp: __g::DateTime,
    }
    impl __g::gel_protocol::query_arg::QueryArgs for Input {
        fn encode(
            &self,
            encoder: &mut __g::gel_protocol::query_arg::Encoder,
        ) -> core::result::Result<(), __g::gel_errors::Error> {
            let map = __g::gel_protocol::named_args! {
                "timestamp" => { let value : __g::gel_protocol::model::Datetime = self
                .timestamp.clone().try_into().map_err(| e | { <
                __g::gel_errors::kinds::NumericOutOfRangeError as
                __g::gel_errors::ErrorKind > ::build() }) ?; value },
            };
            map.encode(encoder)
        }
    }
    #[derive(::std::fmt::Debug, ::core::clone::Clone)]
    pub struct Output {
        pub id: __g::uuid::Uuid,
        pub created_at: __g::DateTime,
    }
    /// The original query string provided to the macro. Can be reused in your codebase.
    pub const QUERY: &str = "select CreatedAt {*} filter .created_at = <datetime>$timestamp;";
}
